# ClayEngineDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-tool.ps1
res/: Sphere.mtl  Torus.mtl
res/Shaders/: Assimp.frag  Assimp.vert  BloomFinal.vert  Blur.frag  Blur.vert  MVPShader.vert  MVPTexShader.frag  MVPTexShader.vert
res/shaders/: AssimpLight.frag  AssimpLight.vert  BloomFinal.frag  Solid.frag  Solid.vert  Text.vert  TextureSurface.frag  TextureSurface.vert
src/: main.cpp
src/Scenes/Basic/: BasicScene.cpp  BasicScene.h  BasicSceneGUI.cpp  BasicSceneGUI.h
src/Scenes/Galaxy/: GalaxyScene.cpp  GalaxyScene.h  GalaxySceneGUI.cpp  GalaxySceneGUI.h  MoonEntity.cpp  MoonEntity.h  PlanetEntity.cpp  PlanetEntity.h  SunEntity.cpp  SunEntity.h
src/Scenes/Games/: GameScene.cpp  GamesScene.h  GamesSceneGUI.cpp  GamesSceneGUI.h
src/Scenes/Games/Pong/: Ball.cpp  Ball.h  Paddle.cpp  Paddle.h  PongGame.cpp  PongGame.h  PongScene.cpp  PongScene.h  PongSceneGUI.cpp  PongSceneGUI.h
src/Scenes/Games/RPG2D/: MOB.cpp  MOB.h  Player.cpp  Player.h  RPG2DGame.cpp  RPG2DGame.h  RPG2DScene.cpp  RPG2DScene.h  RPG2DSceneGUI.cpp  RPG2DSceneGUI.h
src/Scenes/Games/TurnStrategy/: Settlement.cpp  Settlement.h  TileMap.cpp  TileMap.h  TurnStrategyGUI.cpp  TurnStrategyGUI.h  TurnStrategyGame.cpp  TurnStrategyGame.h  TurnStrategyScene.cpp  TurnStrategyScene.h  Unit.cpp  Unit.h
src/Scenes/Games/Vessels/: Cosmos.cpp  Cosmos.h  Player.cpp  Player.h  Soul.cpp  Soul.h  VesselsGame.cpp  VesselsGame.h  VesselsScene.cpp  VesselsScene.h  VesselsSceneGUI.cpp  VesselsSceneGUI.h
src/Scenes/Lighting/: LightEntity.cpp  LightEntity.h  LightingScene.cpp  LightingScene.h  LightingSceneGUI.cpp  LightingSceneGUI.h
src/Scenes/Menu/: MenuGUI.cpp  MenuGUI.h  MenuScene.cpp  MenuScene.h
src/Scenes/PhysicsScene/: PhysicsScene.cpp  PhysicsScene.h  PhysicsSceneGUI.cpp  PhysicsSceneGUI.h
src/Scenes/Scene2d/: Scene2d.cpp  Scene2d.h  Scene2dGUI.cpp  Scene2dGUI.h
tools/: clean-build.sh
